--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "aos": "^2.3.4",
     "bootstrap": "5.2.1",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
